Change old PageKey references to Line by Line Code
RIP PageKey Solutions!

--- a/404.html
+++ b/404.html
@@ -4,16 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>PageKey Solutions - Portfolio</title>
+  <title>Not Found - Line by Line Code</title>
   <link rel="stylesheet" href="https://unpkg.com/primitive-ui/dist/css/main.min.css">
 </head>
 <body>
   <div class="small-container">
     <h1>Page Not Found</h1>
     <p>Sorry, we couldn't find that page. I probably made another broken link! (My fault!)</p>
-    <a href="http://www.pagekeysolutions.com/" class="button">PageKey Solutions Home</a>
-    <a href="http://portfolio.pagekeysolutions.com/" class="button">Portfolio</a>
-    <a href="http://blog.pagekeysolutions.com/" class="button">Blog</a>
+    <a href="http://linebylinecode.com/" class="button">Line by Line Code</a>
   </div>
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-53512121-3"></script>
