--- a/404.html
+++ b/404.html
@@ -10,8 +10,8 @@
 <body>
   <div class="small-container">
     <h1>Page Not Found</h1>
-    <p>Sorry, we couldn't find that page. I probably made another broken link! (My fault!)</p>
-    <a href="/" class="button">PageKey Solutions Blog</a>
+    <p>Sorry, we couldn't find that page. This site has moved to linebylinecode.com. Please ues the button below to be redirected.</p>
+    <a href="https://linebylinecode.com/" class="button">Line by Line Code</a>
   </div>
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-53512121-3"></script>
